<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_search">Поиск</string>
    <string name="title_favorite">Избранное</string>
    <string name="title_response">Отклики</string>
    <string name="title_messages">Сообщения</string>
    <string name="title_profile">Профиль</string>
    <string name="auth_screen_title">Вход в личный кабинет</string>
    <string name="search_job">Поиск работы</string>
    <string name="enter_data">Введите данные</string>
    <string name="continue_button_text">Продолжить</string>
    <string name="enter_with_password_button_text">Войти с паролем</string>
    <string name="search_workers_text">Поиск сотрудников</string>
    <string name="under_workers_text">Размещение вакансий и доступ к базе резюме</string>
    <string name="search_eorkers_button_text">Я ищу сотрудников</string>
    <string name="respond_button_text">Откликнуться</string>
    <string name="search_hint_text">Поиск вакансий</string>
    <string name="vacancies_title_text">Вакансии для вас</string>
    <string name="search_hint">Должность по подходящим вакансиям</string>
    <string name="filter_text">По соответствию</string>
</resources>