<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="dev.bober.presentation.screens.search.SearchScreen"
        android:label="@string/title_search"
        tools:layout="@layout/search_screen" >
        <action
            android:id="@+id/action_navigation_search_to_vacanciesScreen"
            app:destination="@id/vacanciesScreen"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="dev.bober.presentation.screens.favorite.FavoriteScreen"
        android:label="@string/title_favorite"
        tools:layout="@layout/favorite_screen" />

    <fragment
        android:id="@+id/navigation_response"
        android:name="dev.bober.presentation.screens.response.ResponseScreen"
        android:label="@string/title_response"
        tools:layout="@layout/response_screen" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="dev.bober.presentation.screens.messages.MessagesScreen"
        android:label="@string/title_messages"
        tools:layout="@layout/messages_screen" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="dev.bober.presentation.screens.profile.ProfileScreen"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_screen" />
    <fragment
        android:id="@+id/vacanciesScreen"
        android:name="dev.bober.presentation.screens.vacancies.VacanciesScreen"
        android:label="VacanciesScreen"
        tools:layout="@layout/vacancies_screen" >
        <argument
            android:name="vacancies"
            app:argType="dev.bober.presentation.entity.VacanciesList" />
    </fragment>
</navigation>