<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="#000000">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_screen_title"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#1D1D1D"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#292929"
            android:layout_gravity="center"
            android:elevation="4dp"
            android:backgroundTintMode="src_over"
            android:layout_margin="8dp"
            android:clipToPadding="false"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_job"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_data"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="16dp"
                android:inputType="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_continue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/continue_button_text"
                    android:backgroundTint="#1E88E5"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/button_login_with_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/enter_with_password_button_text"
                    android:backgroundTint="#2196F3"
                    android:textColor="#FFFFFF"
                    android:layout_marginStart="8dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#1D1D1D"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:elevation="4dp"
            android:backgroundTint="#292929"
            android:layout_margin="8dp"
            android:clipToPadding="false"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_workers_text"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/under_workers_text"
                android:textSize="14sp"
                android:textColor="#B0B0B0"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/button_find_employees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_eorkers_button_text"
                android:backgroundTint="#4CAF50"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>